--- a/EserciziLink/index.html
+++ b/EserciziLink/index.html
@@ -10,5 +10,6 @@
     <a href="liberia.html">Accedi alla sezione libri</a><br>
     <a href="poesie.html">Accedi alla sezione poesie</a><br>
     <a href="estate.html">la mia estate</a><br>
+    <a href="cv.html">Curriculum Vitae</a>
 </body>
 </html>
